# CV_course_c-

./: README.md
exercise3/: CMakeLists.txt  exercise1.cpp  exercises.h  main.cpp  qtutils.cpp  qtutils.h  utils.cpp  utils.h
