cmake_minimum_required(VERSION 3.5)
project( ex3 )
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
find_package(Qt5 COMPONENTS REQUIRED Core Gui Widgets)
find_package( OpenCV REQUIRED )
add_executable( ex3 main.cpp utils.cpp )
target_link_libraries( ex3 ${OpenCV_LIBS} Qt5::Core Qt5::Gui Qt5::Widgets )
